@@ -18,8 +18,8 @@
  */
 package org.apache.pinot.core.query.reduce;
 
-import com.google.common.collect.ImmutableMap;
 import java.util.Iterator;
+import java.util.Map;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -37,6 +37,7 @@ import org.apache.pinot.core.transport.ServerRoutingInstance;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.env.PinotConfiguration;
 import org.apache.pinot.spi.exception.QueryErrorCode;
+import org.apache.pinot.spi.query.QueryThreadContext;
 import org.apache.pinot.spi.utils.CommonConstants;
 import org.apache.pinot.sql.parsers.CalciteSqlCompiler;
 import org.mockito.invocation.InvocationOnMock;
@@ -66,7 +67,7 @@ public class StreamingReduceServiceTest {
     assertTrue(verifyException(() -> {
           StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
               threadPoolService,
-              ImmutableMap.of(routingInstance, mockedResponse),
+              Map.of(routingInstance, mockedResponse),
               1000,
               mock(ExecutionStatsAggregator.class));
           return null;
@@ -95,7 +96,7 @@ public class StreamingReduceServiceTest {
     assertTrue(verifyException(() -> {
           StreamingReduceService.processIterativeServerResponse(mock(StreamingReducer.class),
               threadPoolService,
-              ImmutableMap.of(routingInstance, mockedResponse),
+              Map.of(routingInstance, mockedResponse),
               10,
               mock(ExecutionStatsAggregator.class));
           return null;
@@ -136,7 +137,10 @@ public class StreamingReduceServiceTest {
 
     BrokerMetrics metrics = mock(BrokerMetrics.class);
     // Execute
-    BrokerResponseNative response = service.reduceOnStreamResponse(brokerRequest, serverResponseMap, 1000, metrics);
+    BrokerResponseNative response;
+    try (QueryThreadContext ignore = QueryThreadContext.openForSseTest()) {
+      response = service.reduceOnStreamResponse(brokerRequest, serverResponseMap, 1000, metrics);
+    }
 
     // Validate the SERVER_SEGMENT_MISSING was filtered out
     boolean hasMissing = response.getExceptions()
